增加文档编译权限控制